--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,28 +1,28 @@
 [versions]
 accompanistPermissions = "0.35.1-alpha"
-agp = "8.4.0"
+agp = "8.4.2"
 coil = "2.7.0"
 compose = "1.0.0-beta01"
 constraintlayoutCompose = "1.0.1"
-gson = "2.10.1"
+gson = "2.11.0"
 kotlin = "1.9.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
-junitVersion = "1.1.5"
-espressoCore = "3.5.1"
-lifecycleRuntimeKtx = "2.8.0"
-activityCompose = "1.9.0"
-composeBom = "2023.08.00"
-composeNavigation = "2.8.0-beta03"
-materialIconsExtendedAndroid = "1.6.8"
-media3Exoplayer = "1.4.0"
-navigationTesting = "2.7.7"
+junitVersion = "1.2.1"
+espressoCore = "3.6.1"
+lifecycleRuntimeKtx = "2.8.6"
+activityCompose = "1.9.2"
+composeBom = "2024.09.02"
+composeNavigation = "2.8.1"
+materialIconsExtendedAndroid = "1.7.2"
+media3Exoplayer = "1.4.1"
+navigationTesting = "2.8.1"
 roomCompiler = "2.6.1"
 roomKtx = "2.6.1"
 roomRuntime = "2.6.1"
-roomVersion = "2.6.0"
+roomVersion = "2.6.1"
 serialization ="1.6.3"
-uiTextGoogleFonts = "1.6.8"
+uiTextGoogleFonts = "1.7.2"
 
 [libraries]
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermissions" }
